Package 'n grunt stuff

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An IRC Client",
   "main": "app/index.html",
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "postinstall": "bower install"
   },
   "keywords": [
     "irc",
@@ -24,7 +25,8 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-less": "~0.11.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-clean": "~0.5.0"
+    "grunt-contrib-clean": "~0.5.0",
+    "load-grunt-tasks": "~0.4.0"
   },
   "dependencies": {}
 }
